syntax="proto3";
package model;
option java_multiple_files=true;
option java_package = "org.ravi.model";
import "google/protobuf/empty.proto";

service MyService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}